// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skip html extension > Neuro-expert > filelist 1`] = `
"[
  ".yfm",
  "en/folder/index.html",
  "en/index-test-html/index.html",
  "en/index.html",
  "en/page1.html",
  "en/page2.html",
  "en/toc.js",
  "index.html",
  "ru/folder/index.html",
  "ru/index-test-html/index.html",
  "ru/index.html",
  "ru/page1.html",
  "ru/page2.html",
  "ru/toc.js"
]"
`;

exports[`Skip html extension > Neuro-expert 1`] = `
"allowHTML: true
langs: ['en','ru']

neuroExpert:
  projectId:
    en: none
    ru: 77fac9c9ad9811f0997f4641db830dfd
    default: 77fac9c9ad9811f0997f4641db830dfd
  parentId: null
  disabled: false
"
`;

exports[`Skip html extension > Neuro-expert 2`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../../" />
        <title>Page 3 | Neuroexpert</title>
        <link rel="canonical" href="en/folder/index.html">
        <link rel="alternate" href="en/folder/index.html" hreflang="en" />
        <link rel="alternate" href="ru/folder/index.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta http-equiv="Content-Security-Policy" content="script-src https://yastatic.net; connect-src https://browserweb.s3.mdst.yandex.net; frame-src https://expert.yandex.ru; font-src https://yastatic.net;">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/folder/index.html","hreflang":"en"},{"href":"ru/folder/index.html","hreflang":"ru"}],"canonical":"en/folder/index.html","vcsPath":"en/folder/index.md"},"headings":[],"title":"Page 3"},"router":{"pathname":"en/folder/index","depth":3,"base":"../../"},"lang":"en","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="en/toc.js"></script>
        <script type="application/javascript">
            const neuroExpertScript = document.createElement('script');
            neuroExpertScript.type = "module";
            neuroExpertScript.src = "https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js";
            const neuroExpertDiv = document.createElement("div");
            neuroExpertDiv.id = "neuro-expert-widget";
            neuroExpertDiv.className = "dc-neuro-expert-widget";
            neuroExpertScript.onload = () => {
                function tryAppend() {
                    const widgetsDiv = document.getElementById("dc-widgets");
                    if (widgetsDiv) {
                        widgetsDiv.appendChild(neuroExpertDiv);
                        window.initNeuroexpert({"projectId":"none","hasOutsideClick":true,"parentId":"neuro-expert-widget"});
                    } else {
                        setTimeout(tryAppend, 50);
                    }
                }
                tryAppend();
            };
            document.body.appendChild(neuroExpertScript);
        </script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 3`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../../" />
        <title>Folder | Neuroexpert</title>
        <link rel="canonical" href="en/index-test-html/index.html">
        <link rel="alternate" href="en/index-test-html/index.html" hreflang="en" />
        <link rel="alternate" href="ru/index-test-html/index.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta http-equiv="Content-Security-Policy" content="script-src https://yastatic.net; connect-src https://browserweb.s3.mdst.yandex.net; frame-src https://expert.yandex.ru; font-src https://yastatic.net;">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;&lt;a href=\\"en/page1.html\\"&gt;Link 1&lt;/a&gt;&lt;br /&gt;/n&lt;a href=\\"en/page2.html\\"&gt;Link 2&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/index-test-html/index.html","hreflang":"en"},{"href":"ru/index-test-html/index.html","hreflang":"ru"}],"canonical":"en/index-test-html/index.html","vcsPath":"en/index-test-html/index.md"},"headings":[],"title":"Folder"},"router":{"pathname":"en/index-test-html/index","depth":3,"base":"../../"},"lang":"en","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="en/toc.js"></script>
        <script type="application/javascript">
            const neuroExpertScript = document.createElement('script');
            neuroExpertScript.type = "module";
            neuroExpertScript.src = "https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js";
            const neuroExpertDiv = document.createElement("div");
            neuroExpertDiv.id = "neuro-expert-widget";
            neuroExpertDiv.className = "dc-neuro-expert-widget";
            neuroExpertScript.onload = () => {
                function tryAppend() {
                    const widgetsDiv = document.getElementById("dc-widgets");
                    if (widgetsDiv) {
                        widgetsDiv.appendChild(neuroExpertDiv);
                        window.initNeuroexpert({"projectId":"none","hasOutsideClick":true,"parentId":"neuro-expert-widget"});
                    } else {
                        setTimeout(tryAppend, 50);
                    }
                }
                tryAppend();
            };
            document.body.appendChild(neuroExpertScript);
        </script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 4`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Header | Neuroexpert</title>
        <link rel="canonical" href="en/index.html">
        <link rel="alternate" href="en/index.html" hreflang="en" />
        <link rel="alternate" href="ru/index.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="neuroExpert" content="[object Object]">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Content&lt;/p&gt;/n&lt;p&gt;&lt;a href=\\"en/page1.html\\"&gt;Link 1&lt;/a&gt;&lt;br /&gt;/n&lt;a href=\\"en/page2.html\\"&gt;Link 2&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/index.html","hreflang":"en"},{"href":"ru/index.html","hreflang":"ru"}],"canonical":"en/index.html","neuroExpert":{"disabled":true},"vcsPath":"en/index.md"},"headings":[],"title":"Header"},"router":{"pathname":"en/index","depth":2,"base":"../"},"lang":"en","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="en/toc.js"></script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 5`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Page 1 | Neuroexpert</title>
        <link rel="canonical" href="en/page1.html">
        <link rel="alternate" href="en/page1.html" hreflang="en" />
        <link rel="alternate" href="ru/page1.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="neuroExpert" content="[object Object]">
        <meta http-equiv="Content-Security-Policy" content="script-src https://yastatic.net; connect-src https://browserweb.s3.mdst.yandex.net; frame-src https://expert.yandex.ru; font-src https://yastatic.net;">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;&lt;a href=\\"en/page2.html#hash\\"&gt;Link&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/page1.html","hreflang":"en"},{"href":"ru/page1.html","hreflang":"ru"}],"canonical":"en/page1.html","neuroExpert":{"parentId":"neuro-expert-div"},"vcsPath":"en/page1.md"},"headings":[],"title":"Page 1"},"router":{"pathname":"en/page1","depth":2,"base":"../"},"lang":"en","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="en/toc.js"></script>
        <script type="application/javascript">
            const neuroExpertScript = document.createElement('script');
            neuroExpertScript.type = "module";
            neuroExpertScript.src = "https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js";
            const neuroExpertDiv = document.createElement("div");
            neuroExpertDiv.id = "neuro-expert-div";
            neuroExpertDiv.className = "dc-neuro-expert-widget";
            neuroExpertScript.onload = () => {
                function tryAppend() {
                    const widgetsDiv = document.getElementById("dc-widgets");
                    if (widgetsDiv) {
                        widgetsDiv.appendChild(neuroExpertDiv);
                        window.initNeuroexpert({"projectId":"none","hasOutsideClick":true,"parentId":"neuro-expert-div"});
                    } else {
                        setTimeout(tryAppend, 50);
                    }
                }
                tryAppend();
            };
            document.body.appendChild(neuroExpertScript);
        </script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 6`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Page 2 | Neuroexpert</title>
        <link rel="canonical" href="en/page2.html">
        <link rel="alternate" href="en/page2.html" hreflang="en" />
        <link rel="alternate" href="ru/page2.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta http-equiv="Content-Security-Policy" content="script-src https://yastatic.net; connect-src https://browserweb.s3.mdst.yandex.net; frame-src https://expert.yandex.ru; font-src https://yastatic.net;">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;h2 id=\\"hash\\"&gt;&lt;a href=\\"en/page2.html#hash\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;hash&lt;/span&gt;&lt;/a&gt;hash&lt;/h2&gt;/n&lt;p&gt;&lt;a href=\\"en/folder/index.html\\"&gt;Link&lt;/a&gt;&lt;br /&gt;/n&lt;a href=\\"https://example.com\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\"&gt;External link&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/page2.html","hreflang":"en"},{"href":"ru/page2.html","hreflang":"ru"}],"canonical":"en/page2.html","vcsPath":"en/page2.md"},"headings":[{"title":"hash","href":"en/page2.html#hash","level":2}],"title":"Page 2"},"router":{"pathname":"en/page2","depth":2,"base":"../"},"lang":"en","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="en/toc.js"></script>
        <script type="application/javascript">
            const neuroExpertScript = document.createElement('script');
            neuroExpertScript.type = "module";
            neuroExpertScript.src = "https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js";
            const neuroExpertDiv = document.createElement("div");
            neuroExpertDiv.id = "neuro-expert-widget";
            neuroExpertDiv.className = "dc-neuro-expert-widget";
            neuroExpertScript.onload = () => {
                function tryAppend() {
                    const widgetsDiv = document.getElementById("dc-widgets");
                    if (widgetsDiv) {
                        widgetsDiv.appendChild(neuroExpertDiv);
                        window.initNeuroexpert({"projectId":"none","hasOutsideClick":true,"parentId":"neuro-expert-widget"});
                    } else {
                        setTimeout(tryAppend, 50);
                    }
                }
                tryAppend();
            };
            document.body.appendChild(neuroExpertScript);
        </script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 7`] = `"window.__DATA__.data.toc = {"title":"Neuroexpert","href":"en/index.html","items":[{"name":"Title 1","href":"en/page1.html","id":"UUID"},{"name":"Title 2","href":"en/page2.html","id":"UUID"},{"name":"Title 3","href":"en/folder/index.html","id":"UUID"},{"name":"Title 4","href":"en/index-test-html/index.html","id":"UUID"}],"path":"en/toc.yaml","id":"UUID"};"`;

exports[`Skip html extension > Neuro-expert 8`] = `
"<!DOCTYPE html>
<html lang="en" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Redirect to ./en/index.html</title>
        <meta http-equiv="refresh" content="0; url=./en/index.html">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        <script type="application/javascript">
            window.location.replace("./en/index.html");
        </script>
    </head>
    <body class="g-root g-root_theme_light">
        If you are not redirected automatically, follow this <a href="./en/index.html">link</a>.
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 9`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../../" />
        <title>Страница 3 | Нейроэксперт</title>
        <link rel="canonical" href="ru/folder/index.html">
        <link rel="alternate" href="en/folder/index.html" hreflang="en" />
        <link rel="alternate" href="ru/folder/index.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta http-equiv="Content-Security-Policy" content="script-src https://yastatic.net; connect-src https://browserweb.s3.mdst.yandex.net; frame-src https://expert.yandex.ru; font-src https://yastatic.net;">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/folder/index.html","hreflang":"en"},{"href":"ru/folder/index.html","hreflang":"ru"}],"canonical":"ru/folder/index.html","vcsPath":"ru/folder/index.md"},"headings":[],"title":"Страница 3"},"router":{"pathname":"ru/folder/index","depth":3,"base":"../../"},"lang":"ru","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="ru/toc.js"></script>
        <script type="application/javascript">
            const neuroExpertScript = document.createElement('script');
            neuroExpertScript.type = "module";
            neuroExpertScript.src = "https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js";
            const neuroExpertDiv = document.createElement("div");
            neuroExpertDiv.id = "neuro-expert-widget";
            neuroExpertDiv.className = "dc-neuro-expert-widget";
            neuroExpertScript.onload = () => {
                function tryAppend() {
                    const widgetsDiv = document.getElementById("dc-widgets");
                    if (widgetsDiv) {
                        widgetsDiv.appendChild(neuroExpertDiv);
                        window.initNeuroexpert({"projectId":"77fac9c9ad9811f0997f4641db830dfd","hasOutsideClick":true,"parentId":"neuro-expert-widget"});
                    } else {
                        setTimeout(tryAppend, 50);
                    }
                }
                tryAppend();
            };
            document.body.appendChild(neuroExpertScript);
        </script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 10`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../../" />
        <title>Папка | Нейроэксперт</title>
        <link rel="canonical" href="ru/index-test-html/index.html">
        <link rel="alternate" href="en/index-test-html/index.html" hreflang="en" />
        <link rel="alternate" href="ru/index-test-html/index.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta http-equiv="Content-Security-Policy" content="script-src https://yastatic.net; connect-src https://browserweb.s3.mdst.yandex.net; frame-src https://expert.yandex.ru; font-src https://yastatic.net;">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;&lt;a href=\\"ru/page1.html\\"&gt;Ссылка 1&lt;/a&gt;&lt;br /&gt;/n&lt;a href=\\"ru/page2.html\\"&gt;Ссылка 2&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/index-test-html/index.html","hreflang":"en"},{"href":"ru/index-test-html/index.html","hreflang":"ru"}],"canonical":"ru/index-test-html/index.html","vcsPath":"ru/index-test-html/index.md"},"headings":[],"title":"Папка"},"router":{"pathname":"ru/index-test-html/index","depth":3,"base":"../../"},"lang":"ru","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="ru/toc.js"></script>
        <script type="application/javascript">
            const neuroExpertScript = document.createElement('script');
            neuroExpertScript.type = "module";
            neuroExpertScript.src = "https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js";
            const neuroExpertDiv = document.createElement("div");
            neuroExpertDiv.id = "neuro-expert-widget";
            neuroExpertDiv.className = "dc-neuro-expert-widget";
            neuroExpertScript.onload = () => {
                function tryAppend() {
                    const widgetsDiv = document.getElementById("dc-widgets");
                    if (widgetsDiv) {
                        widgetsDiv.appendChild(neuroExpertDiv);
                        window.initNeuroexpert({"projectId":"77fac9c9ad9811f0997f4641db830dfd","hasOutsideClick":true,"parentId":"neuro-expert-widget"});
                    } else {
                        setTimeout(tryAppend, 50);
                    }
                }
                tryAppend();
            };
            document.body.appendChild(neuroExpertScript);
        </script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 11`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Хэдер | Нейроэксперт</title>
        <link rel="canonical" href="ru/index.html">
        <link rel="alternate" href="en/index.html" hreflang="en" />
        <link rel="alternate" href="ru/index.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta http-equiv="Content-Security-Policy" content="script-src https://yastatic.net; connect-src https://browserweb.s3.mdst.yandex.net; frame-src https://expert.yandex.ru; font-src https://yastatic.net;">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Контент&lt;/p&gt;/n&lt;p&gt;&lt;a href=\\"ru/page1.html\\"&gt;Ссылка 1&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/index.html","hreflang":"en"},{"href":"ru/index.html","hreflang":"ru"}],"canonical":"ru/index.html","vcsPath":"ru/index.md"},"headings":[],"title":"Хэдер"},"router":{"pathname":"ru/index","depth":2,"base":"../"},"lang":"ru","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="ru/toc.js"></script>
        <script type="application/javascript">
            const neuroExpertScript = document.createElement('script');
            neuroExpertScript.type = "module";
            neuroExpertScript.src = "https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js";
            const neuroExpertDiv = document.createElement("div");
            neuroExpertDiv.id = "neuro-expert-widget";
            neuroExpertDiv.className = "dc-neuro-expert-widget";
            neuroExpertScript.onload = () => {
                function tryAppend() {
                    const widgetsDiv = document.getElementById("dc-widgets");
                    if (widgetsDiv) {
                        widgetsDiv.appendChild(neuroExpertDiv);
                        window.initNeuroexpert({"projectId":"77fac9c9ad9811f0997f4641db830dfd","hasOutsideClick":true,"parentId":"neuro-expert-widget"});
                    } else {
                        setTimeout(tryAppend, 50);
                    }
                }
                tryAppend();
            };
            document.body.appendChild(neuroExpertScript);
        </script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 12`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Страница 1 | Нейроэксперт</title>
        <link rel="canonical" href="ru/page1.html">
        <link rel="alternate" href="en/page1.html" hreflang="en" />
        <link rel="alternate" href="ru/page1.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta http-equiv="Content-Security-Policy" content="script-src https://yastatic.net; connect-src https://browserweb.s3.mdst.yandex.net; frame-src https://expert.yandex.ru; font-src https://yastatic.net;">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;&lt;a href=\\"ru/page2.html#hash\\"&gt;Link&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/page1.html","hreflang":"en"},{"href":"ru/page1.html","hreflang":"ru"}],"canonical":"ru/page1.html","vcsPath":"ru/page1.md"},"headings":[],"title":"Страница 1"},"router":{"pathname":"ru/page1","depth":2,"base":"../"},"lang":"ru","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="ru/toc.js"></script>
        <script type="application/javascript">
            const neuroExpertScript = document.createElement('script');
            neuroExpertScript.type = "module";
            neuroExpertScript.src = "https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js";
            const neuroExpertDiv = document.createElement("div");
            neuroExpertDiv.id = "neuro-expert-widget";
            neuroExpertDiv.className = "dc-neuro-expert-widget";
            neuroExpertScript.onload = () => {
                function tryAppend() {
                    const widgetsDiv = document.getElementById("dc-widgets");
                    if (widgetsDiv) {
                        widgetsDiv.appendChild(neuroExpertDiv);
                        window.initNeuroexpert({"projectId":"77fac9c9ad9811f0997f4641db830dfd","hasOutsideClick":true,"parentId":"neuro-expert-widget"});
                    } else {
                        setTimeout(tryAppend, 50);
                    }
                }
                tryAppend();
            };
            document.body.appendChild(neuroExpertScript);
        </script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 13`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Страница 2 | Нейроэксперт</title>
        <link rel="canonical" href="ru/page2.html">
        <link rel="alternate" href="en/page2.html" hreflang="en" />
        <link rel="alternate" href="ru/page2.html" hreflang="ru" />
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta http-equiv="Content-Security-Policy" content="script-src https://yastatic.net; connect-src https://browserweb.s3.mdst.yandex.net; frame-src https://expert.yandex.ru; font-src https://yastatic.net;">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;h2 id=\\"hesh\\"&gt;&lt;a href=\\"ru/page2.html#hesh\\" class=\\"yfm-anchor\\" aria-hidden=\\"true\\"&gt;&lt;span class=\\"visually-hidden\\" data-no-index=\\"true\\"&gt;хэш&lt;/span&gt;&lt;/a&gt;хэш&lt;/h2&gt;/n&lt;p&gt;&lt;a href=\\"ru/folder/index.html\\"&gt;Ссылка&lt;/a&gt;&lt;br /&gt;/n&lt;a href=\\"https://example.com\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\"&gt;Внешняя ссылка&lt;/a&gt;&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"alternate":[{"href":"en/page2.html","hreflang":"en"},{"href":"ru/page2.html","hreflang":"ru"}],"canonical":"ru/page2.html","vcsPath":"ru/page2.md"},"headings":[{"title":"хэш","href":"ru/page2.html#hesh","level":2}],"title":"Страница 2"},"router":{"pathname":"ru/page2","depth":2,"base":"../"},"lang":"ru","langs":["en","ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="ru/toc.js"></script>
        <script type="application/javascript">
            const neuroExpertScript = document.createElement('script');
            neuroExpertScript.type = "module";
            neuroExpertScript.src = "https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js";
            const neuroExpertDiv = document.createElement("div");
            neuroExpertDiv.id = "neuro-expert-widget";
            neuroExpertDiv.className = "dc-neuro-expert-widget";
            neuroExpertScript.onload = () => {
                function tryAppend() {
                    const widgetsDiv = document.getElementById("dc-widgets");
                    if (widgetsDiv) {
                        widgetsDiv.appendChild(neuroExpertDiv);
                        window.initNeuroexpert({"projectId":"77fac9c9ad9811f0997f4641db830dfd","hasOutsideClick":true,"parentId":"neuro-expert-widget"});
                    } else {
                        setTimeout(tryAppend, 50);
                    }
                }
                tryAppend();
            };
            document.body.appendChild(neuroExpertScript);
        </script>
    </body>
</html>"
`;

exports[`Skip html extension > Neuro-expert 14`] = `"window.__DATA__.data.toc = {"title":"Нейроэксперт","href":"ru/index.html","items":[{"name":"Заголовок 1","href":"ru/page1.html","id":"UUID"},{"name":"Заголовок 2","href":"ru/page2.html","id":"UUID"},{"name":"Заголовок 3","href":"ru/folder/index.html","id":"UUID"},{"name":"Заголовок 4","href":"ru/index-test-html/index.html","id":"UUID"}],"path":"ru/toc.yaml","id":"UUID"};"`;
